--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: c
-compiler:
-  - gcc
-  - clang
+sudo: required
+services:
+  - docker
 before_install:
-    - sudo apt-get -qq update
+  - sudo apt-get -qq update
 install:
-    - sudo apt-get -qq install ruby rake bison git
+  - sudo sh -c "curl -L https://github.com/docker/compose/releases/download/1.3.3/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose"
+  - sudo chmod +x /usr/local/bin/docker-compose
 script:
-  - MRUBY_CONFIG=.travis_build_config.rb rake test
+  - docker-compose run test
